# fda-tools

./: .bandit  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ralphrc  .secrets.baseline  .yamllint.yml  BACKUP_QUICK_START.md  BACKWARD_COMPATIBILITY_ANALYSIS.md  BATCH_1_COMPLETE_REPORT.md  BATCH_1_LINEAR_ISSUES.md  BATCH_1_TEST_SUMMARY.md  BATCH_2_LINEAR_ISSUES.md  BATCH_3_ACTUAL_STATUS.md  BATCH_3_TO_8_LINEAR_ISSUES.md  CFR_VERIFICATION_WORKSHEET.md  CICD_QUICK_START.md  CI_CD_README.md  COMPLIANCE_AUDIT_REPORT_SIMULATED.md  COMPLIANCE_REVIEW_CORRECTIONS.md  COMPREHENSIVE_PLUGIN_REVIEW_REPORT.md  COMPREHENSIVE_REVIEW_SUMMARY.md  COMPREHENSIVE_TEST_IMPLEMENTATION_STATUS.md  COMPREHENSIVE_TEST_ORCHESTRATION_SUMMARY.md  CONTRIBUTING.md  CREATE_LINEAR_ISSUES_GUIDE.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIXES_IMPLEMENTATION_PLAN.md  DAY_3_4_AUDIT_EXECUTION_GUIDE.md  DAY_3_4_QUICK_START.md  DOCKER_QUICK_START.md  DOCKER_README.md  DUPLICATE_FILES_ANALYSIS.md  DUPLICATE_STRUCTURE_CODE_REVIEW.md  Dockerfile  EXECUTION_STATUS.md  FDA-14-GAP-018-IMPLEMENTATION-COMPLETE.md  (+145 more)
plugins/fda_tools/: .gitignore  .mcp.integrity.json  .pre-commit-config.yaml  CHANGELOG.md  CODE-001_README.md  CODE_REVIEW_v5.27.0.md  CONNECTORS.md  COVERAGE_REPORT.md  FDA-15-IMPLEMENTATION-DETAILS.md  FDA-15-REFACTORING-COMPLETE.md  FDA-167_PACKAGE_MIGRATION_SUMMARY.md  FDA-168_COMPLETION_CHECKLIST.md  FDA-168_FILES_DELIVERED.txt  FDA-168_FINAL_DELIVERY_REPORT.md  FDA-168_IMPLEMENTATION_SUMMARY.md  FDA-182_IMPLEMENTATION_COMPLETE.md  FDA-20-COMPLETION-REPORT.md  FDA-21-FILES-MODIFIED.md  FDA-37-REFACTORING-COMPLETE.md  FDA-59-IMPLEMENTATION-SUMMARY.md  FDA-60-GAP-031-COMPLETE.md  FDA-60-GAP-031-EXAMPLE-OUTPUT.md  FE-007-IMPLEMENTATION-SUMMARY.md  KEYRING_MIGRATION_GUIDE.md  ORCHESTRATOR_ARCHITECTURE.md  README.md  REGULATORY_COMPLIANCE_REVIEW.md  SECURE_API_KEYS_QUICK_REFERENCE.md  SECURITY_AUDIT_2026-02-18.md  SPRINT_6_IMPLEMENTATION_SUMMARY.md  TICKET-014-TEST-RESULTS.md  TICKET-016-COMPLETION-SUMMARY.md  TICKET-017-VERIFICATION-SPEC.md  TICKET-018-VERIFICATION-SPEC.md  TICKET-021-VERIFICATION-SPEC.md  TREND_VISUALIZATION_QUICKSTART.md  __init__.py  batch1_task2_result.json  batch1_task3_result.json  batch2_task1_gap_analyzer.json  (+16 more)
plugins/fda_tools/.claude-plugin/: plugin.json
plugins/fda_tools/agents/: expert-evaluator.md  regulatory-compliance-auditor.md  research-intelligence.md  review-simulator.md  standards-coverage-auditor.md  submission-assembler.md  submission-writer.md
plugins/fda_tools/bridge/: requirements.txt  security_gateway.py  server.py  session_store.py  test_execute.py  tool_emulator.py
plugins/fda_tools/commands/: FDA_API_REFERENCE.md  a.md  alias.md  analyze-expert-evals.md  analyze.md  annual-reports.md  approval-probability.md  asm.md  audit.md  b.md  cache.md  calc.md  clinical-requirements.md  compare-se.md  configure.md  consistency.md  d.md  dashboard.md  data-pipeline.md  detect-changes.md  draft.md  expert-eval.md  export.md  extract.md  g.md  gap-analysis.md  generate-standards.md  guidance.md  import.md  inspections.md  integrate-external.md  lineage.md  literature.md  monitor.md  p.md  pathway.md  pc.md  pccp.md  pipeline.md  pma-compare.md  (+24 more)
plugins/fda_tools/config/: alertmanager.yml
plugins/fda_tools/data/: fda_standards_database.json  implantable_product_codes.json
plugins/fda_tools/docs/: AUTH_QUICK_START.md  CFR_PART_11_COMPLIANCE_MAPPING.md  CONFIGURATION_ARCHITECTURE.md  DIFF_REPORTING_GUIDE.md  E2E_QUICK_START.md  E2E_TESTING_GUIDE.md  ELECTRONIC_SIGNATURES_CFR_COMPLIANCE.md  ESTAR_FIELD_EXTRACTION_GUIDE.md  EXPERT_EVALUATION_GUIDE.md  EXPERT_EVALUATION_RECRUITMENT.md  EXPERT_FEEDBACK_IMPLEMENTATION_PLAN.md  FDA-186_E2E_TEST_INFRASTRUCTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_HELPERS_MIGRATION_GUIDE.md  INSTALLATION.md  MCP_SECURITY_GUIDE.md  PATH_VALIDATION_GUIDE.md  PERFORMANCE_TUNING.md  PHASE4_ARCHITECTURE.md  PREDICATE_RECOMMENDATION_VALIDATION.md  PRESTAR_WORKFLOW.md  PRIORITY1_INTEGRATION_COMPLETE.md  PRIORITY3_OCR_COMPLETE.md  RATE_LIMITER_MIGRATION_GUIDE.md  TEST_IMPLEMENTATION_CHECKLIST.md  TICKET_VERIFICATION_REPORT.md  TROUBLESHOOTING.md  estar-workflow.md
plugins/fda_tools/examples/: rate_limiter_demo.py
plugins/fda_tools/lib/: GAP_ANALYZER_REFACTOR_PLAN.md  README_MCP_INTEGRITY.md  __init__.py  agent_contracts.py  agent_permission_policy.py  auth.py  backup_manager.py  cache_manager.py  cfr_part11.py  combination_detector.py  config.py  cross_process_rate_limiter.py  data_completeness_scorer.py  data_fallback.py  database_router.py  ecopy_exporter.py  enterprise_sso.py  estar_field_extractor.py  expert_validator.py  fda_enrichment.py  feature_analytics.py  gap_analyzer.py  guidance_cluster.py  guidance_embedder.py  guidance_freshness.py  guidance_indexer.py  guidance_search.py  hde_support.py  health_checks.py  import_helpers.py  input_validators.py  local_llm.py  logger.py  logging_config.py  mcp_integrity.py  metrics.py  monitoring.py  monitoring_security.py  multi_repo_orchestrator.py  npd_agent_matrix.py  (+35 more)
plugins/fda_tools/references/: accessgudid-api.md  cdrh-portal.md  decision-traceability.md  draft-templates.md  output-formatting.md  section-patterns.md  standards-database.md  test-plan-framework.md
plugins/fda_tools/scripts/: FDA_HTTP_CONFIGURATION.md  USER_AGENT_QUICK_REF.md  __init__.py  agent_performance_tracker.py  agent_registry.py  agent_selector.py  alert_sender.py  annual_report_tracker.py  approval_probability.py  auth_cli.py  auto_generate_device_standards.py  backup_project.py  batch_seed.py  batchfetch.py  benchmark_runner.py  benchmark_similarity_cache.py  breakthrough_designation.py  build_structured_cache.py  cache_cli.py  cache_integrity.py  change_detection.py  change_detector.py  check_health.py  check_version.py  clinical_requirements_mapper.py  compare_sections.py  competitive_dashboard.py  create_linear_issues_from_manifest.py  data_refresh_orchestrator.py  de_novo_generator.py  demo_diff_reporting.py  demo_progress_bar.py  error_handling.py  (+81 more)
(+1542 files in other folders)
