[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda-tools"
version = "5.36.0"
description = "AI-powered tools for FDA medical device regulatory work"
authors = [{name = "Andrew Lasiter", email = "andrew@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "keyring>=23.13.0",
    "cryptography>=40.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/claude-code"
Documentation = "https://github.com/anthropics/claude-code"
Repository = "https://github.com/anthropics/claude-code"

[project.scripts]
fda-tools = "fda_tools.cli:main"

[tool.setuptools]
packages = ["fda_tools", "fda_tools.lib", "fda_tools.scripts", "fda_tools.tests", "fda_tools.bridge"]

[tool.setuptools.package-data]
fda_tools = [
    "data/**/*",
    "templates/**/*",
    "commands/**/*",
    "skills/**/*",
    "config/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "security: Security vulnerability tests",
    "integration: Integration tests requiring external services",
    "slow: Tests that take more than 1 second",
    "e2e: End-to-end tests",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
